--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,35 @@
 .header {
+  position: sticky;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
-  padding: 10px 0;
+  padding: 10px 30px;
   gap: 100px;
-}
-header {
-  box-shadow: 0px 0px 8px gray;
+  &__items {
+    display: flex;
+    gap: 20px;
+    padding-left: 100px;
+    button {
+      background: none;
+      border: none;
+      font-size: 16px;
+    }
+  }
+  &__input {
+    display: flex;
+    align-items: center;
+    width: 300px;
+    padding: 8px 18px;
+    gap: 10px;
+    border: 1px solid #d5d5d5;
+    background: #f5f6fa;
+    border-radius: 25px;
+    input {
+      background: transparent;
+      outline: none;
+      border: none;
+      width: 90%;
+    }
+  }
 }
