--- a/src/components/TableMembers/TableMembers.scss
+++ b/src/components/TableMembers/TableMembers.scss
@@ -1,13 +1,75 @@
+$table-border-color: #ccc;
+$table-border-radius: 10px;
+$table-padding: 15px;
+
 .table {
-  margin: 50px auto;
-  width: 90%;
-  border-collapse: collapse;
-  tr {
-    td,
-    th {
-      padding: 5px;
-      border: 1px solid grey;
-      text-align: center;
+  width: 95%;
+  margin: 0 auto;
+  border-collapse: separate;
+  border-spacing: 0;
+  border: 1px solid $table-border-color;
+  border-radius: $table-border-radius;
+  &__budget__title {
+    text-align: center;
+  }
+  th {
+    text-align: start;
+  }
+  &__budget {
+    text-align: center !important;
+    border-radius: 5px;
+    padding: 5px;
+    background: #caeee9;
+    color: #00b69b;
+    margin: 0 auto;
+    &__null {
+      background: #e0d4fc;
+      color: #6226ef;
+    }
+    &__minus {
+      background: #fcd7d4;
+      color: #ef3826;
+    }
+  }
+  th,
+  td {
+    padding: $table-padding;
+    border-bottom: 1px solid $table-border-color;
+  }
+
+  th:first-child {
+    border-top-left-radius: $table-border-radius;
+  }
+
+  th:last-child {
+    border-top-right-radius: $table-border-radius;
+  }
+
+  tr:last-child td:first-child {
+    border-bottom-left-radius: $table-border-radius;
+  }
+
+  tr:last-child td:last-child {
+    border-bottom-right-radius: $table-border-radius;
+  }
+  &__payment__button {
+    background: #00b69b;
+    color: #fff;
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+  }
+  &__more__button {
+    border: none;
+    background: transparent;
+    color: #6226ef;
+    font-size: 16px;
+    padding: 5px;
+    transition: 0.4s;
+    border-radius: 5px;
+    &:hover {
+      background: #6226ef;
+      color: #fff;
     }
   }
 }
