--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -1,4 +1,13 @@
 .admin {
   display: grid;
   grid-template-columns: (300px 1fr);
+  transition: all 0.5s ease;
+}
+.admin__show {
+  display: grid;
+  grid-template-columns: 80px 1fr;
+}
+
+.outlet {
+  background: red;
 }
