--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,10 @@
+header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  background: #fff;
+  z-index: 9999;
+}
 .header {
   position: sticky;
   top: 0;
@@ -17,6 +24,7 @@
     }
   }
   &__input {
+    position: relative;
     display: flex;
     align-items: center;
     width: 300px;
@@ -31,5 +39,27 @@
       border: none;
       width: 90%;
     }
+  }
+}
+
+.customer__search {
+  padding: 10px;
+  border-radius: 10px;
+  overflow-y: scroll;
+  max-height: 400px;
+
+  position: absolute;
+  top: 40px;
+  left: 10px;
+  background: #fff;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  &__frame {
+    padding: 5px;
+    border: 1.5px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
   }
 }
