--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -2,6 +2,9 @@
   display: grid;
   grid-template-columns: (300px 1fr);
   transition: all 0.5s ease;
+  position: sticky;
+  top: 30px;
+  left: 0;
 }
 .admin__show {
   display: grid;
