--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,10 +1,10 @@
 .sidebar {
   position: sticky;
-  top: 0;
+  top: 40px;
   left: 0;
   height: 100vh;
   padding: 20px;
-  background: #eee;
+  background: #fff;
   transition: all 0.5s ease;
   &__list {
     display: flex;
