--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,9 +1,10 @@
 .sidebar {
   position: sticky;
-  top: 40px;
+  top: 0;
   left: 0;
   height: 100vh;
   padding: 20px;
+  position: 99999999;
   background: #fff;
   transition: all 0.5s ease;
   &__list {
@@ -23,10 +24,18 @@
       display: flex;
       align-items: center;
       gap: 20px;
-      background: #ddd;
+      background: #fff;
       padding: 10px;
       color: rgb(13, 13, 13);
       border-radius: 4px;
+      // transition-delay: 0.3s;
+      &:hover {
+        background: rgba(30, 143, 255, 0.41);
+      }
+    }
+    .active {
+      background: dodgerblue;
+      color: #fff;
     }
   }
   &__show {
@@ -38,6 +47,25 @@
     }
     span {
       opacity: 1;
+    }
+  }
+  &__log__out {
+    a {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      display: flex;
+      gap: 10px;
+      font-size: 18px;
+      color: gray;
+      &:hover {
+        color: red;
+      }
+    }
+    @media (max-width: 450px) {
+      p {
+        display: none;
+      }
     }
   }
 }
