--- a/src/components/TableMembers/TableMembers.scss
+++ b/src/components/TableMembers/TableMembers.scss
@@ -1,31 +1,41 @@
-$table-border-color: #ccc;
-$table-border-radius: 10px;
-$table-padding: 15px;
+.table__selects {
+  display: grid;
+  grid-template-columns: repeat(4, 120px);
+  justify-content: end;
+  gap: 10px;
+  padding: 30px;
+  @media (max-width: 900px) {
+    justify-content: left;
+    grid-template-columns: repeat(2, 100px);
+  }
+  select {
+    padding: 5px;
+    border: 1.5px solid transparent;
+    border-radius: 5px;
+    font-size: 16px;
+    outline: none;
+  }
+}
 
-.table {
-  width: 95%;
-  margin: 50px auto;
-  border-collapse: separate;
-  border-spacing: 0;
-  border: 1px solid $table-border-color;
-  border-radius: $table-border-radius;
+.table__pagination {
+  display: none;
+}
+
+table {
+  border-collapse: collapse;
   background: #fff;
-  &__budget__title {
-    text-align: center;
-  }
-  th {
-    text-align: start;
-  }
-  tr {
-    position: relative;
-  }
+  width: 95%;
+  margin: 20px auto;
+}
+.table {
   &__budget {
-    text-align: center !important;
     border-radius: 5px;
     padding: 5px;
     background: #caeee9;
+    width: 110px;
+    text-align: center;
+
     color: #00b69b;
-    margin: 0 auto;
     &__null {
       background: #e0d4fc;
       color: #6226ef;
@@ -44,33 +54,13 @@ $table-padding: 15px;
     background: none;
     position: absolute;
   }
-  th,
-  td {
-    padding: $table-padding;
-    border-bottom: 1px solid $table-border-color;
-  }
-
-  th:first-child {
-    border-top-left-radius: $table-border-radius;
-  }
-
-  th:last-child {
-    border-top-right-radius: $table-border-radius;
-  }
-
-  tr:last-child td:first-child {
-    border-bottom-left-radius: $table-border-radius;
-  }
-
-  tr:last-child td:last-child {
-    border-bottom-right-radius: $table-border-radius;
-  }
   &__payment__button {
     background: #00b69b;
     color: #fff;
     border-radius: 5px;
     border: none;
     padding: 5px;
+    width: 80px;
   }
   &__more__button {
     border: none;
@@ -85,17 +75,65 @@ $table-padding: 15px;
       color: #fff;
     }
   }
-}
 
-.table__td {
-  position: relative;
-  margin: 100px;
-}
-.pin__button {
-  top: 5px;
-  left: 5px;
-  position: absolute;
-  background: none;
-  border: none;
-  font-size: 18px;
+  th,
+  td {
+    padding: 1rem;
+    color: black;
+  }
+  th {
+    text-align: left;
+    background: dodgerblue;
+  }
+
+  tr:nth-of-type(2n) {
+    background: rgba(30, 143, 255, 0.069);
+  }
+  .table__td {
+    position: relative;
+  }
+
+  .pin__button {
+    top: 2px;
+    left: 5px;
+    position: absolute;
+    background: none;
+    border: none;
+    font-size: 18px;
+  }
+  @media (max-width: 1050px) {
+    th {
+      display: none;
+    }
+    td {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-content: space-between;
+      padding: 0.5rem 1rem;
+    }
+    td:first-child {
+      padding-top: 2rem;
+    }
+    td:last-child {
+      padding-bottom: 2rem;
+    }
+    td::before {
+      content: attr(data-cell) " : ";
+      font-weight: 700;
+      text-transform: capitalize;
+    }
+  }
+  @media (max-width: 500px) {
+    table {
+      width: 70%;
+    }
+
+    td::before {
+      display: none;
+    }
+    td {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+  }
 }
