--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -14,3 +14,32 @@
 .outlet {
   background: #eee;
 }
+@media (max-width: 1100px) {
+  .admin {
+    grid-template-columns: (250px 1fr);
+  }
+  .admin__show {
+    display: grid;
+    grid-template-columns: 80px 1fr;
+  }
+}
+
+@media (max-width: 700px) {
+  .admin {
+    grid-template-columns: (200px 1fr);
+  }
+  .admin__show {
+    display: grid;
+    grid-template-columns: 80px 1fr;
+  }
+}
+
+@media (max-width: 450px) {
+  .admin {
+    grid-template-columns: (80px 1fr);
+  }
+  .admin__show {
+    display: grid;
+    grid-template-columns: 80px 1fr;
+  }
+}
