--- a/src/pages/Admin/profile/Profile.scss
+++ b/src/pages/Admin/profile/Profile.scss
@@ -1,8 +1,10 @@
 .profile {
+  background: #fff;
   width: 90%;
   max-height: 400px;
   margin: 20px auto;
   padding: 30px;
+  border-radius: 20px;
   border: 2px solid #ddd;
   &__body {
     display: flex;
