--- a/src/pages/Admin/createProduct/CreateProduct.scss
+++ b/src/pages/Admin/createProduct/CreateProduct.scss
@@ -21,7 +21,7 @@
   flex-direction: column;
   width: 150px;
   gap: 10px;
-  p {
+  li {
     padding: 5px;
     background: #ddd;
     width: 100%;
